--- a/team.html
+++ b/team.html
@@ -41,7 +41,7 @@
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
-                                    <h1>Dr.Krunal <span>Patel</span></h1>
+                                    <h1>Dr.Krunal Patel</h1>
                                     <h3>Faculty Coordinators</h3>
                                     <p>Associate Professor Information Technology</p>
                                     <div class="icons">
@@ -59,9 +59,9 @@
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
-                                    <h1>Dr.Krunal <span>Patel</span></h1>
+                                    <h1>Nehaben Chauhan</h1>
                                     <h3>Faculty Coordinators</h3>
-                                    <p>Associate Professor Information Technology</p>
+                                    <p>Assistant Professor Information Technology</p>
                                     <div class="icons">
                                         <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                                         <a href="#"><i class="fa-brands fa-instagram"></i></a>
@@ -78,11 +78,11 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/cscadit/assets/img/team/DSC_0148-min (1).JPG" alt="">
+                                <img src="/cscadit/assets/img/team/Tej Kotadiya.JPG" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
-                                    <h1>Tej  <span>Kothadiya</span></h1>
+                                    <h1>Tej Kothadiya</h1>
                                     <p>3rd Year Information Technology</p>
                                     <div class="icons">
                                         <a href="https://www.linkedin.com/in/tej-kothadiya-05249421b"><i class="fa-brands fa-linkedin-in"></i></a>
@@ -95,11 +95,11 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/cscadit/assets/img/team/DSC_0169-min.JPG" alt="">
+                                <img src="/cscadit/assets/img/team/Rishiraj Parmar.JPG" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
-                                    <h1>Rishiraj  <span>Parmar</span></h1>
+                                    <h1>Rishiraj Parmar</h1>
                                     <p>3rd Year Information Technology</p>
                                     <div class="icons">
                                         <a href="https://www.linkedin.com/in/rishiraj-parmar-208183227/"><i class="fa-brands fa-linkedin-in"></i></a>
@@ -117,11 +117,11 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/cscadit/assets/img/team/krunalsir.jpg" alt=""> -->
+                                <img src="/cscadit/assets/img/team/Harsh Mistry.JPG" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
-                                    <h1>Harsh <span>Mistry</span></h1>
+                                    <h1>Harsh Mistry</h1>
                                     <p>2nd Year Information Technology</p>
                                     <div class="icons">
                                         <a href="https://www.linkedin.com/in/harsh-mistry7
@@ -136,11 +136,11 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/cscadit/assets/img/team/DSC_0145-min.JPG" alt="">
+                                <img src="/cscadit/assets/img/team/Sahil Jadwani.JPG" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
-                                    <h1>Sahil <span>Jadwani</span></h1>
+                                    <h1>Sahil Jadwani</h1>
                                     <p>4th Year Computer Engineering</p>
                                     <div class="icons">
                                         <a href="https://www.linkedin.com/in/sahil-jadwani-4b5886208/"><i class="fa-brands fa-linkedin-in"></i></a>
@@ -153,7 +153,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/cscadit/assets/img/team/krunalsir.jpg" alt=""> -->
+                                <img src="/cscadit/assets/img/team/Mirza MD.Izhanbeg.jpg" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
