--- a/team.html
+++ b/team.html
@@ -187,11 +187,11 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="/cscadit/assets/img/team/DSC_0152-min.JPG" alt="">
+                                <img src="/cscadit/assets/img/team/Om Khatri.JPG" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
-                                    <h1>Om <span>Khatri</span></h1>
+                                    <h1>Om Khatri</h1>
                                     <p>4th Year Information Technology</p>
                                     <div class="icons">
                                         <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
@@ -221,7 +221,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/cscadit/assets/img/team/DSC_0241-min.JPG" alt=""> -->
+                                <img src="/cscadit/assets/img/team/Kunj Patel.jpg" alt=""> 
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -238,7 +238,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/cscadit/assets/img/team/DSC_0152-min.JPG" alt=""> -->
+                                <img src="/cscadit/assets/img/team/Yash_Padhara.jpg" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -277,7 +277,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/cscadit/assets/img/team/krunalsir.jpg" alt=""> -->
+                                <img src="/cscadit/assets/img/team/Dev Kamaliya.JPG" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -294,7 +294,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/cscadit/assets/img/team/krunalsir.jpg" alt=""> -->
+                                <img src="/cscadit/assets/img/team/Shobhit Bobin.JPG" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -316,7 +316,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/cscadit/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
+                                <img src="/cscadit/assets/img/team/Dhvanil Patel.JPG" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -333,7 +333,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/cscadit/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
+                                <img src="/cscadit/assets/img/team/Adhirath Garasiya.JPG" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -350,7 +350,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/cscadit/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
+                                <img src="/cscadit/assets/img/team/Saurav Gheewala.jpg" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
