--- a/team.html
+++ b/team.html
@@ -255,7 +255,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/cscadit/assets/img/team/krunalsir.jpg" alt=""> -->
+                                <img src="/cscadit/assets/img/team/Dwiti Bajaj.jpg" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -384,7 +384,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/cscadit/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
+                                <img src="/cscadit/assets/img/team/Vyas Darpit.jpg" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -401,7 +401,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/cscadit/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
+                                <img src="/cscadit/assets/img/team/Vyas Darpit.jpg" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -418,7 +418,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/cscadit/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
+                                <img src="/cscadit/assets/img/team/Savan Moradiya.jpg" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -435,7 +435,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/cscadit/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
+                                <img src="/cscadit/assets/img/team/Pratikshya Bhanja.jpg" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -469,7 +469,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/cscadit/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
+                                <img src="/cscadit/assets/img/team/Rahil Vahora.JPG" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -486,7 +486,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/cscadit/assets/img/team/DSC_0148-min (1).JPG" alt=""> -->
+                                <img src="/cscadit/assets/img/team/Nikunj Talpada.JPG" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
