--- a/team.html
+++ b/team.html
@@ -269,6 +269,23 @@
                             </div>
                         </div>
                     </div>
+                    <div class="flip-card">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                                <img src="/cscadit/assets/img/team/Priyanshu Nandkar.JPG" alt="">
+                            </div>
+                            <div class="flip-card-back">
+                                <div class="flip-card-back-cnt">
+                                    <h1>Priyanshu Nandkar</h1>
+                                    <p>3rd Year Information Technology</p>
+                                    <div class="icons">
+                                        <a href="https://www.linkedin.com/in/priyanshu-nandkar-3689b6232"><i class="fa-brands fa-linkedin-in"></i></a>
+                                        <a href="https://instagram.com/priyanshu._o_?utm_source=qr&igshid=MzNlNGNkZWQ4Mg=="><i class="fa-brands fa-instagram"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="cwt-card">
