--- a/team.html
+++ b/team.html
@@ -517,6 +517,23 @@
                             </div>
                         </div>
                     </div>
+                    <div class="flip-card">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                                <img src="/cscadit/assets/img/team/Aditya Patel.jpg" alt="">
+                            </div>
+                            <div class="flip-card-back">
+                                <div class="flip-card-back-cnt">
+                                    <h1>Aditya Patel</h1>
+                                    <p>2nd Year Computer Engineering</p>
+                                    <div class="icons">
+                                        <a href="https://www.linkedin.com/in/madcypher56"><i class="fa-brands fa-linkedin-in"></i></a>
+                                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
