--- a/event.html
+++ b/event.html
@@ -38,7 +38,7 @@
                 <h1>Introductory Session of Cyber Security Club</h1>
                 <p>The Cyber Security Club conducted its inauguration ceremony for the 2022 Batch of students. The audience included First Year students & Diploma to Degree students of ADIT, all branches.</p>
                 <div class="eve-btn">
-                    <a href="#">More</a>
+                    <a href="/cscadit/event-1.html">More</a>
                 </div>
             </div>
         </div>
@@ -47,7 +47,7 @@
                 <h1>Hands-on Workshop</h1>
                 <p>The guest speaker for the workshop was Dr. Ravi Sheth.The workshop started by felicitating our guest Dr. Ravi Sheth.</p>
                 <div class="eve-btn">
-                    <a href="#">More</a>
+                    <a href="/cscadit/event-2.html">More</a>
                 </div>
             </div>
             <div class="event-righ">
@@ -62,7 +62,7 @@
                 <h1>Expert Talk on Cyber Crime Awareness & Inauguration Ceremony</h1>
                 <p>The Cyber Security Club conducted the inauguration of their club and an expert talk on the matter of cyber security on 5th August,2022 to create awareness about cybercrimes and how to be aware of any cyber threats that you may face and to tell career path of cyber security specialist and ethical hackers. The program started at 11.30 pm.</p>
                 <div class="eve-btn">
-                    <a href="#">More</a>
+                    <a href="/cscadit/event-3.html">More</a>
                 </div>
             </div>
         </div>
@@ -71,7 +71,7 @@
                 <h1>OSINT Master Class</h1>
                 <p>The Cyber Security Club ADIT hosted a three-day hands-on master class on OSINT commencing on 12-13-14 April 2023 between 4 PM to 5 PM.</p>
                 <div class="eve-btn">
-                    <a href="#">More</a>
+                    <a href="/cscadit/event-4.html">More</a>
                 </div>
             </div>
             <div class="event-righ">
