--- a/event-3.html
+++ b/event-3.html
@@ -63,6 +63,6 @@
         </div>
         &copy; CSC@ADIT | All Rights Reserved
     </div>
-    <script src="/assets/js/script.js"></script>
+    <script src="/cscadit/assets/js/script.js"></script>
 </body>
 </html>
