--- a/event-4.html
+++ b/event-4.html
@@ -65,6 +65,6 @@
         </div>
         &copy; CSC@ADIT | All Rights Reserved
     </div>
-    <script src="/assets/js/script.js"></script>
+    <script src="/cscadit/assets/js/script.js"></script>
 </body>
 </html>
