--- a/team.html
+++ b/team.html
@@ -204,7 +204,7 @@
                     <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/cscadit/assets/img/team/krunalsir.jpg" alt=""> -->
+                                <img src="/cscadit/assets/img/team/Dharm Barodiya.jpg" alt="">
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
