--- a/team.html
+++ b/team.html
@@ -52,10 +52,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="flip-card">
+                    <!-- <div class="flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <!-- <img src="/cscadit/assets/img/team/krunalsir.jpg" alt=""> -->
+                                <img src="/cscadit/assets/img/team/krunalsir.jpg" alt=""> 
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
@@ -69,7 +69,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="stc-card">
