--- a/team.html
+++ b/team.html
@@ -288,7 +288,7 @@
                             </div>
                             <div class="flip-card-back">
                                 <div class="flip-card-back-cnt">
-                                    <h1>Ourvish Dobariya</h1>
+                                    <h1>Purvish Dobariya</h1>
                                     <p>2nd Year Computer Engineering</p>
                                     <div class="icons">
                                         <a href="https://www.linkedin.com/in/madcypher56"><i class="fa-brands fa-linkedin-in"></i></a>
